// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`markup markup string 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": undefined,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "mounted": true,
    "pristine": false,
    "props": Object {},
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": undefined,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "type": "string",
      "x-component": "",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "rules": Array [],
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
}
`;

exports[`markup markup virtualbox 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": undefined,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "mounted": true,
    "pristine": false,
    "props": Object {},
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "NO_NAME_FIELD_$0": Object {
    "display": true,
    "displayName": "VirtualFieldState",
    "initialized": true,
    "mounted": false,
    "name": "NO_NAME_FIELD_$0",
    "props": Object {
      "type": "object",
      "x-component": "card",
      "x-props": Object {
        "title": "this is card",
      },
    },
    "unmounted": false,
    "visible": true,
  },
  "NO_NAME_FIELD_$0.aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": undefined,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "NO_NAME_FIELD_$0.aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "type": "string",
      "x-component": "",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "rules": Array [],
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
  "aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": undefined,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "NO_NAME_FIELD_$0.aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "type": "string",
      "x-component": "",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "rules": Array [],
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
}
`;
